--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,12 @@ body {
 	font-family: 'Lato', sans-serif;
 	color:#747704;
 	font-weight: 300;
+	background-color:#DBDBE4;
 }
 
 .text-muted {
-	color:#BCBBBB;
+	#color:#BCBBBB;
+	color:black;
 }
 
 .text-thin {
